--- a/thank-you.html
+++ b/thank-you.html
@@ -65,11 +65,16 @@
           <h2 class="white">
             We’ll get back with you via<br> email as early as possible
           </h2>
-          <h3 class="white">
-            Sent to: <span id="user-email">[Loading...]</span>
-          </h3>
+          <div class="mail-container">
+            <img src="mail.svg">
+            <h3 class="white">
+            Sent to <span id="user-email">[Loading...]</span>
+            </h3>
+          </div>
           <div class="button-container button-container-thanks">
-            <button onclick="window.location.href='/'">Back home</button>
+            <button>
+              <a href="index.html">Back home</a>
+            </button>
           </div>
         </div>
 
