--- a/thank-you.html
+++ b/thank-you.html
@@ -71,11 +71,11 @@
             Sent to <span id="user-email">[Loading...]</span>
             </h3>
           </div>
-          <div class="button-container button-container-thanks">
-            <button>
+
+          <div class="button-container-thanks">
               <a href="index.html">Back home</a>
-            </button>
           </div>
+
         </div>
 
         <div class="hero-left-back">
