--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
           Full private lodging and river<br> system from $1490 per person
         </h3>
         <div class="button-container">
-          <button>Reserve now</button>
-          <button class="secondary">Learn more</button>
+          <button>Reserve a spot</button>
+          <button class="secondary">Contact</button>
         </div>
       </div>
       
