--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="calendar.css">
 
   <!-- Add JS -->
-  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <script src="flatpickr.js"></script>
 
   <meta name="description" content="AlltRaf Rafverktakar">
   <meta property="og:image" content=""/>
