--- a/index.html
+++ b/index.html
@@ -286,24 +286,54 @@
     </div>
 
 
+    <div class="sticky-reserve" id="stickyReserve">
+      <div class="content">
+        <h3>River Lýsa</h3>
+        <p>Lock In Your Adventure with 15% Upfront!</p>
+        <button class="reserve-btn">Reserve a spot</button>
+      </div>
+    </div>
+
+    <script type="text/javascript">
+      document.addEventListener("scroll", function () {
+        const stickyReserve = document.getElementById("stickyReserve");
+        const scrollPosition = window.scrollY;
+
+        // Define the threshold in pixels from the top
+        const thresholdFromTop = 320; // Adjust this value as needed
+
+        // Show the sticky reserve when the user scrolls past the threshold
+        if (scrollPosition >= thresholdFromTop) {
+          stickyReserve.classList.add("visible");
+        } else {
+          stickyReserve.classList.remove("visible");
+        }
+      });
+    </script>
+
+
     <script>
       
-      // Get reference to the header
+      // Get reference to the header and menu button
       const header = document.querySelector('header');
+      const menuBtn = document.querySelector('#menu-btn');
 
       // Function to handle scroll event
       function handleScroll() {
-        if (window.scrollY > 50) {
-          // Add "scrolled" class when scroll is greater than 50px
+        if (window.scrollY > 50 || menuBtn.checked) {
+          // Add "scrolled" class when scroll is greater than 50px or menu is open
           header.classList.add('scrolled');
         } else {
-          // Remove "scrolled" class when at the top
+          // Remove "scrolled" class when at the top and menu is closed
           header.classList.remove('scrolled');
         }
       }
 
       // Add the scroll event listener
       window.addEventListener('scroll', handleScroll);
+
+      // Add event listener for menu toggle
+      menuBtn.addEventListener('change', handleScroll);
     </script>>
 
     <!-- GLightbox Library -->
