--- a/index.html
+++ b/index.html
@@ -288,8 +288,12 @@
 
     <div class="sticky-reserve" id="stickyReserve">
       <div class="content">
-        <h3>River Lýsa</h3>
-        <p>Lock In Your Adventure with 15% Upfront!</p>
+
+        <div class ="sticky-text">
+          <h3>River Lýsa</h3>
+          <p>Lock In Your Adventure with 15% Upfront!</p>
+        </div>
+
         <button class="reserve-btn">Reserve a spot</button>
       </div>
     </div>
