--- a/index.html
+++ b/index.html
@@ -291,10 +291,10 @@
 
         <div class ="sticky-text">
           <h3>River Lýsa</h3>
-          <p>Lock In Your Adventure with 15% Upfront!</p>
+          <p>Lock In Your Adventure<br> with 15% Upfront!</p>
         </div>
 
-        <button class="reserve-btn">Reserve a spot</button>
+        <button class="reserve-btn">Reserve now</button>
       </div>
     </div>
 
