--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
-      <li><a href="#work">Our Work</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#careers">Careers</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="#work">River Lýsa</a></li>
+      <li><a href="#about">Day tours</a></li>
+      <li><a href="#careers">About us</a></li>
+      <li><a href="#contact">Contact us</a></li>
     </ul>
   </header>
 
