--- a/index.html
+++ b/index.html
@@ -99,31 +99,44 @@
                     <div class="gallery">
 
                         <button class = "secondary"onclick="openGlightbox()">Show all photos</button>
-                        <div class ="gallery-1">
+
+                        <div class="gallery-row">
+
+                            <div class ="gallery-1">
+                              <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                                <img loading = "lazy" src="img/g1-1.jpg">
+                              </a>
+                              <a href="img/g1-2-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                                <img loading = "lazy" src="img/g1-2.jpg">
+                              </a>
+                            </div>
+                            <div class="gallery-2">
+
+                              <div class = "gallery-2-top">
+                                <a href="img/g1-3.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                                  <img loading = "lazy" src="img/g1-3.jpg">
+                                </a>
+                                <a href="img/g1-4.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                                  <img loading = "lazy" src="img/g1-4.jpg">
+                                </a>
+
+                              </div>
+                              <div class="gallery-2-bottom">
+                                <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                                  <img loading = "lazy" class = "gallery-img-last" loading = "lazy" src="img/g1-5.jpg">
+                                </a>
+                              </div>
+                            </div>
+
+                        </div>
+
+                        <div class="gallery-3">
                           <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                            <img loading = "lazy" src="img/g1-1.jpg">
-                          </a>
-                          <a href="img/g1-2-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                            <img loading = "lazy" src="img/g1-2.jpg">
+                            <img loading = "lazy" class = "gallery-img-last" loading = "lazy" src="img/g1-5.jpg">
                           </a>
                         </div>
-                        <div class="gallery-2">
 
-                          <div class = "gallery-2-top">
-                            <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                              <img loading = "lazy" src="img/g1-3.jpg">
-                            </a>
-                            <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                              <img loading = "lazy" src="img/g1-4.jpg">
-                            </a>
 
-                          </div>
-                          <div class="gallery-2-bottom">
-                            <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                              <img loading = "lazy" class = "gallery-img-last" loading = "lazy" src="img/g1-5.jpg">
-                            </a>
-                          </div>
-                        </div>
 
                         <!-- Hidden gallery -->
 
