--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <meta name="keywords" content="Rafverktakar, Rafvirki">
   <meta name="author" content="AlltRaf Rafverktakar">  
   <meta http-equiv="Cache-Control" content="max-age=31536000">
+  <meta name="theme-color" content="#2A2E28">
 
 
 </head>
@@ -82,7 +83,7 @@
 
       <video poster ="img/poster.jpg"class="video-insert" autoplay loop muted playsinline><source src="img/video.mp4" type="video/mp4">
 
-
+        <a href="">asdf</a>
 
       </video>
 
