--- a/index.html
+++ b/index.html
@@ -150,6 +150,30 @@
 
                 </div>
 
+                <div class="section-2">
+                    <h2>Fish every species Icelandic fly fishing has to offer</h2>
+                    <span>FULLY PRIVATE SEARUN & LOCAL RIVERS AND WATERS</span>
+
+                      <div class="fish-grid">
+                          <div class="fish-card">
+                            <img src="atlantic-salmon.jpg" alt="Atlantic Salmon">
+                            <h3>Atlantic Salmon</h3>
+                            <p>Searun</p>
+                            <p>July - September</p>
+                            <p>6 - 12 lbs</p>
+                          </div>
+                          <div class="fish-card">
+                            <img src="sea-trout.jpg" alt="Sea Trout">
+                            <h3>Sea Trout</h3>
+                            <p>Searun</p>
+                            <p>April - July</p>
+                            <p>4 - 10 lbs</p>
+                          </div>
+                          <!-- Repeat for other cards -->
+                        </div>
+
+                </div>
+
          </div>
 
           <div class="sticky-cta">
