--- a/index.html
+++ b/index.html
@@ -154,23 +154,72 @@
                     <h2>Fish every species Icelandic fly fishing has to offer</h2>
                     <span>FULLY PRIVATE SEARUN & LOCAL RIVERS AND WATERS</span>
 
-                      <div class="fish-grid">
-                          <div class="fish-card">
-                            <img src="atlantic-salmon.jpg" alt="Atlantic Salmon">
-                            <h3>Atlantic Salmon</h3>
-                            <p>Searun</p>
-                            <p>July - September</p>
-                            <p>6 - 12 lbs</p>
-                          </div>
-                          <div class="fish-card">
-                            <img src="sea-trout.jpg" alt="Sea Trout">
-                            <h3>Sea Trout</h3>
-                            <p>Searun</p>
-                            <p>April - July</p>
-                            <p>4 - 10 lbs</p>
-                          </div>
-                          <!-- Repeat for other cards -->
-                        </div>
+                       <div class="fish-grid">
+                         <!-- Card 1: Atlantic Salmon -->
+                         <div class="fish-card">
+                           <img src="img/Fish-Grid03.jpg" alt="Atlantic Salmon">
+                           <div class="fish-grid-content">
+                             <h3>Atlantic Salmon</h3>
+                             <ul>
+                               <li>Searun</li>
+                               <li>July – September</li>
+                               <li>6 – 12 lbs</li>
+                             </ul>
+                           </div>
+                         </div>
+
+                         <!-- Card 2: Sea Trout -->
+                         <div class="fish-card">
+                           <img src="img/Fish-Grid05.jpg" alt="Sea Trout">
+                           <div class="fish-grid-content">
+                             <h3>Sea Trout</h3>
+                             <ul>
+                               <li>Searun</li>
+                               <li>April – July</li>
+                               <li>4 – 10 lbs</li>
+                             </ul>
+                           </div>
+                         </div>
+
+                         <!-- Card 3: Sea Char -->
+                         <div class="fish-card">
+                           <img src="img/Fish-Grid02.jpg" alt="Sea Char">
+                           <div class="fish-grid-content">
+                             <h3>Sea Char</h3>
+                             <ul>
+                               <li>Searun</li>
+                               <li>July – September</li>
+                               <li>2 – 5 lbs</li>
+                             </ul>
+                           </div>
+                         </div>
+
+                         <!-- Card 4: Brown Trout -->
+                         <div class="fish-card">
+                           <img src="img/Fish-Grid04.jpg" alt="Brown Trout">
+                           <div class="fish-grid-content">
+                             <h3>Brown Trout</h3>
+                             <ul>
+                               <li>Local</li>
+                               <li>All season</li>
+                               <li>0.5 – 6 lbs</li>
+                             </ul>
+                           </div>
+                         </div>
+
+                         <!-- Card 5: Arctic Char -->
+                         <div class="fish-card">
+                           <img src="img/Fish-Grid01.jpg" alt="Arctic Char">
+                           <div class="fish-grid-content">
+                             <h3>Arctic Char</h3>
+                             <ul>
+                               <li>Local</li>
+                               <li>All season</li>
+                               <li>0.5 – 4 lbs</li>
+                             </ul>
+                           </div>
+                         </div>
+                       </div>
 
                 </div>
 
