--- a/index.html
+++ b/index.html
@@ -666,19 +666,24 @@
       });
     </script>
     <script>
-      <script>
-        const form = document.querySelector("form");
+      document.addEventListener("DOMContentLoaded", () => {
+        const form = document.querySelector(".form-post-container");
+        const emailField = document.querySelector("input[name='email']");
+        const redirectField = document.querySelector("input[name='redirect']");
+
         form.addEventListener("submit", (e) => {
-          e.preventDefault(); // Prevent form reload
-          const emailField = document.querySelector("input[name='email']");
-          if (emailField) {
-            console.log("Saving email:", emailField.value); // Debugging log
-            localStorage.setItem("userEmail", emailField.value); // Save email
+          if (emailField && redirectField) {
+            const emailValue = emailField.value;
+            // Update the redirect field with the email query parameter
+            redirectField.value = `https://yourwebsite.com/thank-you?email=${encodeURIComponent(emailValue)}`;
+            console.log("Redirect URL updated:", redirectField.value);
+            // Save email to localStorage as a backup
+            localStorage.setItem("userEmail", emailValue);
           } else {
-            console.log("Email input field not found!");
+            console.error("Email field or redirect field not found.");
           }
-          form.submit(); // Submit the form
         });
+      });
       </script>
     </script>
 
