--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           Full private lodging and river<br> system from $1490 per person
         </h3>
         <div class="button-container">
-          <button>Reserve a spot</button>
+          <button id="openModal">Reserve a spot</button>
           <button class="secondary">Contact</button>
         </div>
       </div>
