--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
         </div>
       </div>
       
-      <div class="hero-left-back">
-
-      </div>
+      <img src="img/hero-back.png">
 
       </div>
 
