--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
       </div>
       
-      <img src="img/hero-back.webp">
+      <img src="img/hero-back.webp" loading="eager">
 
       </div>
 
