--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       </div>
 
-      <video poster ="img/poster.jpg"class="video-insert" autoplay loop muted playsinline><source src="img/video.mp4" type="video/mp4">
+      <video poster ="img/poster.webp"class="video-insert" autoplay loop muted playsinline><source src="img/video.mp4" type="video/mp4">
 
         <a href="">asdf</a>
 
