--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
       <li><a href="#about">Day tours</a></li>
       <li><a href="#careers">About us</a></li>
       <li><a href="#contact">Contact us</a></li>
+      <li>    <button id="openModal">Reserve now</button></li>
     </ul>
+
+
+
   </header>
 
 
@@ -58,11 +62,13 @@
         </div>
       </div>
       
-      <!-- <img src="img/hero-back.webp" loading="eager"> -->
+      <img src="img/hero-back.webp" loading="eager">
 
       </div>
 
-      <!-- <video poster ="img/poster.webp"class="video-insert" autoplay loop muted playsinline><source src="img/video.mp4" type="video/mp4"> -->
+      <video poster ="img/poster.webp"class="video-insert" autoplay loop muted playsinline><source src="img/video.mp4" type="video/mp4">
+
+        <a href="">asdf</a>
 
       </video>
 
