--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
           <div class="sticky-cta">
               <div class="img-container">
                 <img loading ="lazy" src="img/1-small.jpg" width="300" height="100">
+                <img loading ="lazy" src="img/sticky-img-2.jpg" width="300" height="100">
               </div>
               <div class="sticky-container">
                 <span>River Lýsa</span>
